# openpedaller

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  sdkconfig  sdkconfig.old
libnmea/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  openpedaller.c  openpedaller.h
main/peripherals/: gps.c  lcd.c  peripherals.h  sdcard.c
main/persistence/: gpx.c  gpx.h  tcx.h
main/ui/: martian_mono_80.c  roboto_72.c  ui.c  ui.h
